--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.5.0",
+    "crypto-js": "^4.0.0",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "nodemon": "^2.0.2",
     "watchify": "^3.11.1"
   },
